# kiritest

./: CMakeLists.txt  Main.qml  README.md  VLayerControl.qml  colorschememanager.cpp  colorschememanager.h  main.cpp
